--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
-    "start": "babel . --out-dir compiled --presets=env,react --ignore=node_modules,compiled --source-maps inline --watch | live-server",
+    "start": "node app.js",
     "test": "live-server --open=./SpecRunner.html --port=8081",
     "postinstall": "curl -s https://raw.githubusercontent.com/reactorcore/pomander/master/bin/install | bash"
   },
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.2",
+    "express": "^4.16.3",
     "jquery": "^2.2.1",
     "lodash": "^4.6.1",
     "react": "^0.14.7",
