--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Making YouTube with React and ES6",
   "author": "Hack Reactor <curriculum.team@hackreactor.com>",
   "license": "UNLICENSED",
-  "private": true,
+  "private": false,
   "scripts": {
     "start": "node app.js",
     "test": "live-server --open=./SpecRunner.html --port=8081",
